# AutonomySim

./: .clang-format  .clang-format-ignore  .gitignore  404.html  AUTHORS.md  AutonomySim.props  AutonomySim.sln  CHANGELOG.html  CHANGELOG.md  CONTRIBUTING.html  CONTRIBUTING.md  Gemfile  INSTANT_RM_INTEGRATION_SUMMARY.md  INSTANT_RM_STATUS.md  LICENSE  PHASE_2_COMPLETE.md  README.md  ROADMAP.md  SUMMONER_PROOF.md  SUPPORT.html  SUPPORT.md  UNREAL_ENGINE_56_SETUP.md  VERIFICATION_REPORT.md  _config.yml  adding_apis.html  adding_new_apis.html  apis.html  apis_cpp.html  apis_image.html  apis_new.html  apis_upgrading.html  autonomylib_realworld.html  autonomysim_apis.html  autonomysim_getting_started.html  autonomysim_ros_pkgs.html  autonomysim_tutorial_pkgs.html  azure.html  build.sh  build_docs.html  build_faq.html  (+112 more)
.github/: pull_request_template.md  stale.yml
AutonomyLib/: AutonomyLib.vcxproj  AutonomyLib.vcxproj.filters
AutonomyLibUnitTests/: AutonomyLibUnitTests.vcxproj  CelestialTests.hpp  PixhawkTest.hpp  PropulsionFormationTests.cpp  QuaternionTest.hpp  ReadMe.txt  SettingsTest.hpp  SimpleFlightTest.hpp  TestBase.hpp  WorkerThreadTest.hpp  main.cpp
DroneServer/: DroneServer.vcxproj  main.cpp
DroneShell/: DroneShell.vcxproj
Examples/: Examples.vcxproj  GaussianMarkovTest.hpp  InstantRMBridgeExample.cpp  InstantRMGaussianSplattingExample.cpp  PropulsionFormationExample.cpp  StandAlonePhysics.hpp  StandAloneSensors.hpp  SwarmAgenticExample.cpp  SwarmRFCommunicationExample.cpp  main.cpp
HelloCar/: HelloCar.vcxproj  main.cpp
HelloDrone/: HelloDrone.vcxproj  main.cpp
HelloSpawnedDrones/: HelloSpawnedDrones.cpp  HelloSpawnedDrones.vcxproj
MavLinkCom/: MavLinkCom.vcxproj  MavLinkCom.vcxproj.filters  README.md  runsdvui.cmd
Python/: LICENSE  PythonClient.pyproj  PythonClient.sln  README.md  setup.py  update_package.cmd
Unreal/: UnrealPluginFiles.vcxproj  UnrealPluginFiles.vcxproj.filters
UnrealAssets/: README.md
UnrealPlugin/: UnrealPluginFiles.vcxproj  UnrealPluginFiles.vcxproj.filters
_data/: alerts.yml  definitions.yml  glossary.yml  samplelist.yml  strings.yml  tags.yml  terms.yml  topnav.yml
_includes/: archive.html  callout.html  commento.html  feedback.html  footer.html  google_analytics.html  head.html  head_print.html  image.html  important.html  initialize_shuffle.html  inline_image.html  links.html  note.html  sidebar.html  taglogic.html  tip.html  toc.html  topnav.html  warning.html
_layouts/: default.html  default_print.html  none.html  page.html  page_print.html  post.html
_posts/: 2015-04-12-test-post-last-year.html  (+2 more)
cmake/: CMakeLists.txt
cmake/AutonomyLib/: CMakeLists.txt
cmake/AutonomyLibUnitTests/: CMakeLists.txt
cmake/DroneServer/: CMakeLists.txt
cmake/DroneShell/: CMakeLists.txt
cmake/HelloCar/: CMakeLists.txt
cmake/HelloDrone/: CMakeLists.txt
cmake/HelloSpawnedDrones/: CMakeLists.txt
cmake/MavLinkCom/: CMakeLists.txt
cmake/MavLinkCom/MavLinkTest/: CMakeLists.txt
cmake/RpcLibWrapper/: CMakeLists.txt
cmake/build_release/: Makefile
cmake/build_release/AutonomyLib/: Makefile
cmake/build_release/DroneServer/: Makefile
cmake/build_release/DroneShell/: Makefile
cmake/build_release/HelloCar/: Makefile
cmake/build_release/HelloDrone/: Makefile
cmake/build_release/HelloSpawnedDrones/: Makefile
cmake/build_release/MavLinkCom/: Makefile
cmake/build_release/RpcLibWrapper/: Makefile
cmake/build_release/RpcLibWrapper/rpclib/: Makefile  rpclib.pc
cmake/build_release/RpcLibWrapper/rpclib/cmake/: rpclibConfigVersion.cmake  rpclibTargets.cmake
cmake/cmake-modules/: CommonSetup.cmake
cmake/rpclib_wrapper/: CMakeLists.txt
ros2/src/autonomysim_ros_pkgs/: CMakeLists.txt  README.md  package.xml
ros2/src/autonomysim_ros_pkgs/include/: autonomysim_ros_wrapper.h  autonomysim_settings_parser.h  geodetic_conv.hpp  math_common.h  pd_position_controller_simple.h  utils.h
ros2/src/autonomysim_ros_pkgs/launch/: autonomysim_node.launch.py  autonomysim_with_simple_PD_position_controller.launch.py  dynamic_constraints.launch.py  position_controller_simple.launch.py  rviz.launch.py  static_transforms.launch.py
ros2/src/autonomysim_ros_pkgs/rviz/: default.rviz
ros2/src/autonomysim_ros_pkgs/scripts/: car_joy  car_joy.py
ros2/src/autonomysim_ros_pkgs/src/: autonomysim_node.cpp  autonomysim_ros_wrapper.cpp  autonomysim_settings_parser.cpp  pd_position_controller_simple.cpp  pd_position_controller_simple_node.cpp
rust/: ARCHITECTURE.md  Cargo.toml  QUICKSTART.md  README.md  RUST_REWRITE_COMPLETE.md  STATUS.md  TACTICAL_OPTIMIZATION.md  UNREAL_ENGINE_SETUP.md  test_rpc_server.py
rust/autonomysim-backends/: Cargo.toml
rust/autonomysim-backends/src/: lib.rs
rust/autonomysim-backends/src/isaac/: mod.rs  python_bridge.rs
rust/autonomysim-backends/src/mujoco/: ffi.rs  mod.rs
rust/autonomysim-backends/src/unreal/: connection.rs  mod.rs  protocol.rs
rust/autonomysim-backends/src/warp/: ffi.rs  mod.rs
rust/autonomysim-bindings/: Cargo.toml  build.rs
rust/autonomysim-bindings/include/: autonomysim.h
rust/autonomysim-bindings/src/: lib.rs
rust/autonomysim-core/: Cargo.toml
rust/autonomysim-core/src/: backend.rs  fpv.rs  lib.rs  native.rs  sensor.rs  vehicle.rs
rust/autonomysim-gaussian-splat/: Cargo.toml
rust/autonomysim-gaussian-splat/src/: lib.rs
rust/autonomysim-instant-rm/: Cargo.toml
rust/autonomysim-rf-core/: Cargo.toml
rust/autonomysim-rf-core/src/: antenna.rs  lib.rs  models.rs  propagation.rs  utils.rs
rust/autonomysim-summoner/: Cargo.toml  README.md
rust/autonomysim-summoner/src/: communication.rs  coordinator.rs  lib.rs  metrics.rs  partition.rs  scheduler.rs  worker.rs
rust/autonomysim-tactical/: Cargo.toml
rust/autonomysim-tactical/src/: jamming.rs  lib.rs  metrics.rs  network.rs  spectrum.rs
rust/examples/: basic_rf_sim.rs  contested_comms.rs  fpv_drone_racing.rs  gaussian_splat_rf.rs  isaac_multi_env.rs  mujoco_contact.rs  robotic_swarm_demo.rs  summoner_benchmark.rs  summoner_massive_swarm.rs  unreal_robotic_swarm.rs  vehicle_swarm.rs  warp_massive_parallel.rs
(+3136 files in other folders)
