cmake_minimum_required(VERSION 3.5.0)
project(AutonomySim)

add_subdirectory("AutonomyLib")
# add_subdirectory("AutonomyLibUnitTests")
add_subdirectory("RpcLibWrapper")
add_subdirectory("MavLinkCom")
add_subdirectory("HelloCar")
add_subdirectory("HelloDrone")
add_subdirectory("HelloSpawnedDrones")
add_subdirectory("DroneShell")
add_subdirectory("DroneServer")
