[package]
name = "autonomysim-core"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { workspace = true, features = ["serde-serialize"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["sync", "macros"] }
parking_lot.workspace = true
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
