[package]
name = "autonomysim-instant-rm"
version = "0.1.0"
edition = "2021"

[dependencies]
autonomysim-core = { path = "../autonomysim-core" }
nalgebra = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dependencies.pyo3]
version = "0.22"
features = ["auto-initialize"]
optional = true

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
approx = "0.5"
