[package]
name = "autonomysim-summoner"
version = "0.1.0"
edition = "2021"
authors = ["AutonomySim Team"]
description = "Summoner: Scalable Universal Multi-agent Management and Orchestration for Networked Entity Replication - World's largest multi-agent swarm simulation (10,000+ agents)"
license = "MIT"

[dependencies]
autonomysim-core = { path = "../autonomysim-core" }
autonomysim-backends = { path = "../autonomysim-backends" }
autonomysim-rf-core = { path = "../autonomysim-rf-core" }
autonomysim-gaussian-splat = { path = "../autonomysim-gaussian-splat" }
autonomysim-tactical = { path = "../autonomysim-tactical" }

nalgebra = "0.32"
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rayon = "1.8"
parking_lot = "0.12"
crossbeam = "0.8"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
futures = "0.3"

# Distributed computing
mpi = { version = "0.7", optional = true }
bincode = "1.3"

# GPU acceleration (optional)
wgpu = { version = "0.19", optional = true }
bytemuck = { version = "1.14", optional = true }

# Metrics and monitoring
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"

[features]
default = []
# Distribution features
mpi-support = ["mpi"]
gpu-acceleration = ["wgpu", "bytemuck"]
# Profiling
profiling = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
